# libisf-qt

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  NOTES  README  README.md  TODO  isf-qt.kdev4  isf-qt.kdevelop  libisf.kdev4  svn-commit.2.tmp  svn-commit.tmp
cmake/: FindIsfQt.cmake  IsfQtConfig.cmake.in  giflib_hack.cmake  isfqtconfig.h.in  libisfconfig.h.in
data/: isfqtresources.qrc
doc/: apidocs_footer.html  apidocs_header.html  doxygen.css
include/: IsfInkCanvas  IsfInkEdit  IsfQt  IsfQtDrawing  IsfQtStroke  isfdrawing.h  isfinkcanvas.h  isfinkedit.h  isfqt.h  isfqtdrawing.h  isfqtstroke.h
src/: CMakeLists.txt  bezierspline.cpp  bezierspline.h  gif-support.h  isf-qt.dox  isfdrawing.cpp  isfdrawing.h  isfinkcanvas.cpp  isfinkedit.cpp  isfqt-internal.h  isfqt.cpp  isfqtdrawing.cpp  isfqtstroke.cpp  libisf.cpp  libisf.h  libisfglobal.h  libisftypes.h  multibytecoding.cpp  multibytecoding.h  resources.qrc  tags.cpp  tags.h  tagsparser.cpp  tagsparser.h  tagswriter.cpp  tagswriter.h
src/compression/: compression.cpp  compression.h  gorilla.cpp  gorilla.h  huffman.cpp  huffman.h  isfdata.cpp  isfdata.h
src/data/: bitpacking.h  compression.cpp  compression.h  datasource.cpp  datasource.h  deltatransform.cpp  gorilla.cpp  gorilla.h  huffman.cpp  huffman.h  isfdata.h  multibytecoding.cpp  multibytecoding.h
src/data/algorithms/: bitpacking.cpp  bitpacking.h  bitpacking_byte.cpp  bitpacking_byte.h  bitpacking_table.h  deltatransform.cpp  deltatransform.h  huffman.cpp  huffman.h
src/format/: types.cpp  types.h
tests/: CMakeLists.txt  line.isf  line2.isf  mess.isf  signature.isf  test1.isf  test2.isf  test3.isf  test4.isf  test5.isf  test6.isf  test7.isf  test8.isf  test9.isf  test_algorithms.cpp  test_algorithms.h  test_isfdrawing.cpp  test_isfdrawing.h  test_multibyte_coding.cpp  test_multibyte_coding.h  test_png_fortification.cpp  test_png_fortification.h
tests/decode/: CMakeLists.txt  main.cpp  testdecode.ui
tests/inkedit/: CMakeLists.txt  main.cpp  main.h  testinkedit.ui
